# Skynet

./: .env.example  .gitignore  API_SETUP.md  INSTALLATION.md  MORNING_BRIEFING_DOCUMENTATION.md  Makefile  README.md  config.yaml  config_template.yaml  enhanced_telegram_sender.py  example_usage.py  google_calendar_fetcher.py  google_calendar_integration.py  morning_briefing_diagram.md  morning_briefing_workflow.md  package-lock.json  package.json  requirements.txt  send_telegram_photo.py  setup_instructions.md  skynet.config.json  telegram_manager.py  telegram_send_photo.py  tsconfig.json
.cursor/rules/: color-system.mdc  frontend-build-testing.mdc  immediate-settings-toast.mdc  reuse-existing-components.mdc
data/: memory.db
data/sessions/: chat-1769682273616.jsonl  chat-1769714981909.jsonl  chat-1769719152039.jsonl  prefect-flow.jsonl  web-default.jsonl
docs/: BUGS_FOUND.md  CAPABILITIES.md  EXPECTED_BEHAVIOR.md
plans/: ARCHITECTURE.md
prefect/: README.md  requirements.txt  server.py
prefect/flows/: __init__.py  example_flow.py
src/: index.ts
src/agent/: authorization.ts  command-explain.ts  context.ts  index.ts  personas.ts  runner.ts  security.ts  session.ts  tool-parser.ts
src/config/: loader.ts  runtime.ts  schema.ts
src/hardware/: index.ts  (+1 more)
voice/: pyproject.toml
voice/skynet_voice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
voice/src/: __init__.py  config.py  markdown_filter.py  tts.py  wakeword.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
~/: cosmic_reminder.sh
(+83 files in other folders)
